--- a/styles/small.css
+++ b/styles/small.css
@@ -94,7 +94,7 @@
   .name {
     font-family: var(--header-font);
     font-size: 2.5rem;
-    font-family: var(--text-color);
+    font-weight:bolder;
   }
 
   footer {
@@ -220,7 +220,7 @@
     width: 100px;
     text-align: center;
     font-size: 1rem;
-    font-family: var(--header-color);
+    font-family: var(--font-family);
     border-radius: 5px;
   }
 }
