--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -5,9 +5,17 @@
   box-sizing: border-box;
 }
 
-h1, h2, h3, .navigation, #logo {
-   font-family: "Montserrat", sans-serif;
-  font-optical-sizing: auto;
+body {
+  font-family: "Roboto", sans-serif;
+  background: #fff;
+}
+
+h1,
+h2,
+h3,
+.navigation,
+#logo {
+  font-family: "Montserrat", sans-serif;
   font-weight: 400;
   font-style: normal;
 }
@@ -46,9 +54,13 @@ header {
 }
 
 .big-text {
-  font-size: 28px;
-  font-weight: bold;
+  text-align: left;
+  font-size: 29px;
   margin-bottom: 0;
+  margin-left: 0;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 600;
+  font-style: normal;
 }
 
 .small-text {
@@ -153,7 +165,10 @@ body.dark-theme footer {
   box-sizing: border-box;
 }
 
-.card-address, .membership, .phone, .website {
+.card-address,
+.membership,
+.phone,
+.website {
   padding-top: 5px;
   padding-bottom: 5px;
   font-size: 1rem;
@@ -205,7 +220,9 @@ body.dark-theme footer {
   display: none;
 }
 
-.list .card h2, p, a {
+.list .card h2,
+p,
+a {
   font-size: 1rem;
   text-align: left;
   margin-left: 20px;
@@ -228,8 +245,8 @@ footer {
   font-size: 1rem;
 }
 
-footer p  {
-margin-bottom: 5px;
+footer p {
+  margin-bottom: 5px;
 }
 
 footer .social ul {
@@ -243,10 +260,9 @@ footer .social ul {
 .address {
   display: flex;
   flex-direction: column;
-  
 }
 
-.address h2{
+.address h2 {
   margin-left: 20px;
   font-size: 1.2rem;
 }
