--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -10,6 +10,14 @@ body {
   background: #fff;
 }
 
+.navigation a.active {
+    font-weight: bold;
+    color: white; 
+    text-decoration: underline;
+    text-decoration-thickness: 3px; 
+    text-underline-offset: 5px; 
+}
+
 h1,
 h2,
 h3,
@@ -28,6 +36,13 @@ header {
   background-color: #2c3e50;
   color: white;
   position: relative;
+
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 10;
+  box-shadow: 0 4px 2px -2px gray
+
 }
 
 #logo {
@@ -157,6 +172,7 @@ body.dark-theme footer {
   cursor: pointer;
 }
 
+
 .card {
   background-color: rgb(195, 177, 154);
   padding: 15px;
@@ -265,4 +281,8 @@ footer .social ul {
 .address h2 {
   margin-left: 20px;
   font-size: 1.2rem;
+}
+
+#lastModified {
+  color: yellow;
 }
