--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -1,3 +1,10 @@
+
+#home-page {
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+}
+
 #cards.grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
