--- a/styles/large.css
+++ b/styles/large.css
@@ -212,9 +212,27 @@
     max-width: 600px;
     padding: 12px;
     border-radius: 5px;
-
+    animation: bringIn 3s ease-in-out;
   }
 
+  @keyframes bringIn {
+    0% {
+      opacity: 0;
+      transform: scale(0.3);
+    }
+    50% {
+      opacity: 1;
+      transform: scale(1.1);
+
+    }
+    70% {
+      transform: scale(0.9);
+    }
+    100% {
+      transform: scale(1);
+    }
+  }
+  
   #closeModal {
     position: absolute;
     top: 5px;
@@ -231,3 +249,4 @@
   transition:
     background-color 0.7s;
   }
+
