--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -18,6 +18,12 @@ body {
     text-underline-offset: 5px; 
 }
 
+.hero {
+    width: 100%;
+    height: 600px; /* Match the height of the hero image */
+    overflow: hidden; /* Prevent content overflow */
+}
+
 h1,
 h2,
 h3,
