--- a/chamber/styles/discover.css
+++ b/chamber/styles/discover.css
@@ -73,6 +73,26 @@ body {
     color: white;
 }
 
+/* animation */
+img:hover {
+  animation: shake 0.5s;
+  animation-iteration-count: infinite;
+}
+
+@keyframes shake {
+  0% { transform: translate(1px, 1px) rotate(0deg); }
+  10% { transform: translate(-1px, -2px) rotate(-1deg); }
+  20% { transform: translate(-3px, 0px) rotate(1deg); }
+  30% { transform: translate(3px, 2px) rotate(0deg); }
+  40% { transform: translate(1px, -1px) rotate(1deg); }
+  50% { transform: translate(-1px, 2px) rotate(-1deg); }
+  60% { transform: translate(-3px, 1px) rotate(0deg); }
+  70% { transform: translate(3px, 1px) rotate(-1deg); }
+  80% { transform: translate(-1px, -1px) rotate(1deg); }
+  90% { transform: translate(1px, 2px) rotate(0deg); }
+  100% { transform: translate(1px, -2px) rotate(-1deg); }
+}
+
 /* Small */
 #places {
   display: flex;
@@ -82,7 +102,7 @@ body {
 }
 
 #places .place {
-    box-sizing: border-box;
+  box-sizing: border-box;
   margin: 1rem 10px;
   border: 1px solid gray;
   width: 300px;
@@ -92,10 +112,16 @@ body {
   grid-template-columns: 1fr;
   grid-template-rows: auto;
   grid-template-areas:
-    "name"
-    "photo"
-    "description"
-    "address";
+  "name"
+  "photo"
+  "description"
+  "address";
+  transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+}
+
+#places .place:hover {
+  transform: scale(1.05);
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
 }
 #places .place h2 {
   margin: 0.8rem 8px;
