--- a/chamber/styles/discover.css
+++ b/chamber/styles/discover.css
@@ -4,6 +4,11 @@ body {
   background: #fff;
 }
 
+h1 {
+  text-align: center;
+  font-weight: bold;
+  margin: 25px 10px;
+}
 .sidebar {
     width: 300px;
     padding: 15px;
